# klang

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  test.kl
ast/: CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
compiler/: CMakeLists.txt
debug/: CMakeLists.txt
include/klang/lexer/: lexer.h
lexer/: CMakeLists.txt  lexer.cpp
parser/: CMakeLists.txt
tests/: CMakeLists.txt
vm/: CMakeLists.txt
